OLCS-17437: fixed text overflow issue wtih long file names

--- a/assets/_styles/components/page-header.scss
+++ b/assets/_styles/components/page-header.scss
@@ -21,6 +21,8 @@
       color: $grey-1;
       font-weight: 400;
       margin-bottom: 0;
+      overflow: hidden;
+      text-overflow: ellipsis;
     }
 
     &__text {
